<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Turistico</string>
    <string name="names">Name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>

    <!--errors-->
    <string name="error_email"></string>
    <string name="error_password">Password is required</string>
    <string name="error_confirm_pass">Password doesn´t match</string>
    <string name="error_name">Name required</string>
    <string name="error_last_name">Last Name required</string>
    <string name="logged_in">Logged in</string>
    <string name="no_match">Incorrect email or password</string>
    <string name="error_password_length">Password too short, please use at least 6 characters</string>


    <string name="forgot_password">Forgot your password?</string>
    <string name="dont_have_account">Don´t have account?</string>
    <string name="create_one_now">Create one now!</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="already_an_account">You´re already singed up</string>
    <string name="dont_want_register">Don´t you want to register?</string>
    <string name="sing_in_as_a_guest">Sing in as a guest</string>
    <string name="user_name">Juancho Villa.</string>
    <string name="medals">Medals</string>
    <string name="settings">Settings</string>
    <string name="waterfalls">Waterfalls</string>
    <string name="hills">Hills</string>
    <string name="beaches">Beaches</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="share_app">Share the app</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">LOGOUT</string>

    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorite Places</string>
    <string name="profile">Profile</string>

    <string name="which_place">Search a good place</string>
    <string name="discover">Discover Costa Rica, supports national tourism</string>
    <string name="description">Find a place to vacation with your bubble through TurisTico Remember that national tourism has been affected beacuse of COVID-19</string>
    <string name="medals_subtitle">Earn medals by visiting the country</string>
    <string name="gold_description">Visit 6 places of the same category</string>
    <string name="silver_description">Visit 3 places of the same category</string>
    <string name="bronze_description">Visit 2 places of the same category</string>
    <string name="instructions_subtitle">Instructions</string>
    <string name="footer_text">Click on the Explore area to start discovering Costa Rica!</string>
    <string name="btn_protocol">SEE PROTOCOLS</string>
    <string name="protocol_subtitle">Find out about the protocols governed by the Ministry of Health</string>
    <string name="owner_text">By @daniela.alarcon</string>
    <string name="bestphoto_subtitle">We will publish the best photos taken by users</string>

    <string name="instructionfour">You can see the medals you have earned on your profile.</string>
    <string name="instructionthree">Our team will verify that the photo is from the same place and that it of your property.</string>
    <string name="instructiontwo">Click on the + in the gallery and upload a photo of the place.</string>
    <string name="instructionone">Go to the Discover section of each place you have visited.</string>

    <string name="silver">Silver</string>
    <string name="bronze">Bronze</string>
    <string name="gold">Gold</string>
    <string name="divisor_line">Divisor line</string>
    <string name="best_photo">Best photo</string>
    <string name="toucan_bullet_point">Toucan bullet point</string>
    <string name="gold_medal_content">Gold medal</string>
    <string name="silver_medal_content">Silver medal</string>
    <string name="bronze_medal_content">Bronze medal</string>
    <string name="likes_number">2304</string>

    <string name="place_id">place_id</string>
    <string name="place_name">place_name</string>
    <string name="no_register">Email its already used</string>
    <string name="siggned_in">Registered</string>
    <string name="google_maps_key">AIzaSyA5ffxZ9js7tBDj0DezyF-pQmiWhdrc0fg</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <string name="place_information">The Nauyaca Falls are located in a canyon of approximately eighty meters wide. One of the falls is 45 meters high in free fall and the other is 20 meters high in staggered fall, forming at the foot of it, a pool of 1,000 square meters and six meters deep. There are also other smaller natural pools.</string>
    <string name="information_title">The Nauyaca Falls</string>

    <string name="information">Information</string>
    <string name="ubication">Ubication</string>
    <string name="gallery">Gallery</string>

    <string name="near_services">Near services</string>
    <string name="transport">Transport</string>
    <string name="wi_fi">Wi-fi</string>
    <string name="near_beaches">Beaches</string>
    <string name="coffee_service">Cafeteria</string>
    <string name="restaurants">Restaurants</string>
    <string name="favorite_places">Your Favorite Places</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tag_wf">waterfalls</string>
    <string name="tag_hills">hills</string>
    <string name="tag_beach">beaches</string>

    <string name="tag_bronze">bronze</string>
    <string name="tag_silver">silver</string>
    <string name="tag_gold">gold</string>

    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="btn_upload_gallery">Upload your own photos</string>
    <string name="your_favorite_places">Your favorite places</string>
    <string name="medallas">Medals : 0</string>
    <string name="edit_your_name">Edit your name</string>
    <string name="edit_your_last_name">Edit your last name</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="change_profile">Change avatar</string>

    //tooltips of medals
    <string name="upload">\"Upload \"</string>
    <string name="tooltip_resourcer">\" pics in the category of \"</string>
    <string name="tooltip_resource2">\" to get the medal of \"</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>