<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/toucan" />
        <TextView
            android:id="@+id/tv_register_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_gravity="center"
            android:text="@string/register"
            android:fontFamily="@font/spooky_cat"
            android:textSize="40dp"
            android:textColor="@color/darkPurple"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/ed_name"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:paddingLeft="25dp"
                android:ems="8"
                android:textSize="12sp"
                android:hint="@string/names"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginBottom="5dp"
                android:background="@drawable/text_area"
                android:fontFamily="@font/quicksand_variablefont"/>
            <EditText
                android:id="@+id/ed_last_name"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:paddingLeft="25dp"
                android:ems="16"
                android:textSize="12sp"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:background="@drawable/text_area"
                android:fontFamily="@font/quicksand_variablefont"/>
        </LinearLayout>
        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:paddingLeft="25dp"
            android:textSize="12sp"
            android:textColor="@color/colorPrimaryDark"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="5dp"
            android:background="@drawable/text_area"
            android:fontFamily="@font/quicksand_variablefont"/>
        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:paddingLeft="25dp"
            android:textSize="12sp"
            android:textColor="@color/colorPrimaryDark"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="5dp"
            android:background="@drawable/text_area"
            android:fontFamily="@font/quicksand_variablefont"/>
        <EditText
            android:id="@+id/ed_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:paddingLeft="25dp"
            android:textSize="12sp"
            android:textColor="@color/colorPrimaryDark"
            android:hint="@string/confirm_pass"
            android:inputType="textPassword"
            android:background="@drawable/text_area"
            android:fontFamily="@font/quicksand_variablefont"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:textSize="16dp"
        android:background="@drawable/button"
        android:onClick="onClick"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:fontFamily="@font/quicksandbold_regular"
        android:textAllCaps="false"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/tv_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_an_account"
                android:fontFamily="@font/quicksand_variablefont"
                android:textSize="12dp"
                android:textColor="@color/purple"/>
            <Button
                android:id="@+id/btn_go_to_register_two"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/quicksandbold_regular"
                android:onClick="onClick"
                android:textAllCaps="false"
                android:textColor="@color/purple"
                android:textSize="12dp"
                android:text="@string/log_in"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>