<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
      >
        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/toucan" />
        <TextView
            android:id="@+id/tv_log_in_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/spooky_cat"
            android:text="@string/log_in"
            android:textColor="@color/darkPurple"
            android:textSize="40sp"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        >
        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_area"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:autofillHints="@string/email"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/text_area"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="@string/password"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:textSize="14sp"/>
        <Button
            android:id="@+id/btn_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_semibold"
            android:onClick="onClick"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/purple"
            android:textSize="13sp" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/button"
        android:fontFamily="@font/poppins_semibold"
        android:onClick="onClick"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/dont_have_account"
                android:textColor="@color/purple"
                android:textSize="14sp"/>
            <Button
                android:id="@+id/btn_go_to_register_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_semibold"
                android:onClick="onClick"
                android:text="@string/create_one_now"
                android:textAllCaps="false"
                android:textColor="@color/purple"
                android:textSize="14sp"/>
        </LinearLayout>
</LinearLayout>
