<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/round_icon"
        />

    <EditText
        android:id="@+id/ed_edit_name"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_below="@+id/change_profile_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/text_area"
        android:ems="16"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/edit_your_name"
        android:inputType="textPersonName"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/ed_edit_last"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_below="@+id/ed_edit_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/text_area"
        android:ems="16"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/edit_your_last_name"
        android:inputType="textPersonName"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/change_profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/change_profile"
        android:textSize="16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_edit_last"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_cancel"
            android:ems="6"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"/>
        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button"
            android:ems="6"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>

</RelativeLayout>