<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="."
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/toucan" />

        <TextView
            android:id="@+id/tv_log_in_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:fontFamily="@font/spooky_cat"
            android:textSize="45sp"
            android:textColor="@color/darkPurple"/>

    </FrameLayout>

    <Button
        android:id="@+id/btn_go_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:textSize="16sp"
        android:background="@drawable/button"
        android:onClick="onClick"
        android:text="@string/login"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_semibold"
        android:textAllCaps="true"/>

    <Button
        android:id="@+id/btn_go_to_register_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:textSize="16sp"
        android:background="@drawable/button"
        android:onClick="onClick"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_semibold"
        android:textAllCaps="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom|center">
            <TextView
                android:id="@+id/tv_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_want_register"
                android:fontFamily="@font/poppins_light"
                android:textSize="14sp"
                android:textColor="@color/purple"/>
            <Button
                android:id="@+id/btn_guest"
                android:layout_width="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_semibold"
                android:onClick="onClick"
                android:textAllCaps="false"
                android:textColor="@color/purple"
                android:textSize="14sp"
                android:text="@string/sing_in_as_a_guest"/>
    </LinearLayout>

</LinearLayout>