<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SearchFragment">
    <FrameLayout
        android:id="@+id/fl_header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/manzanillo">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:text="@string/discover"
                    android:textColor="@color/white"
                    android:textSize="24sp"/>

            </FrameLayout>
                <HorizontalScrollView
                    android:id="@+id/hsv_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fl_header"
                    android:fillViewport="true"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp">
                    <LinearLayout
                        android:id="@+id/ly_buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            style="?android:attr/buttonBarButtonStyle"
                            android:id="@+id/btn_beach"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="8dp"
                            android:background="@drawable/button"
                            android:fontFamily="@font/poppins_regular"
                            android:paddingStart="32dp"
                            android:paddingEnd="32dp"
                            android:text="@string/beaches"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                        <Button
                            style="?android:attr/buttonBarButtonStyle"
                            android:id="@+id/btn_hill"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="8dp"
                            android:background="@drawable/text_area"
                            android:fontFamily="@font/poppins_regular"
                            android:paddingStart="32dp"
                            android:paddingEnd="32dp"
                            android:text="@string/hills"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="16sp"/>
                        <Button
                            style="?android:attr/buttonBarButtonStyle"
                            android:id="@+id/btn_waterfall"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="8dp"
                            android:background="@drawable/text_area"
                            android:fontFamily="@font/poppins_regular"
                            android:paddingStart="32dp"
                            android:paddingEnd="32dp"

                            android:text="@string/waterfalls"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="16sp"/>
                    </LinearLayout>
                </HorizontalScrollView>

            <LinearLayout
                android:id="@+id/ly_places"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/hsv_buttons"
                android:paddingBottom="50dp">

            </LinearLayout>
        </RelativeLayout>